<resources>
    <string name="app_name">Smart Expense Tracker</string>
    <string name="total_expenses">Total Expenses:</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="enter_amount">Amount</string>
    <string name="enter_date">Date</string>
    <string name="add_note">Note (optional)</string>
    <string name="save_transaction">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="select_category">Select Category</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_date">Date</string>
    <string name="hint_category">Category</string>
    <string name="hint_note">Note</string>
    <string name="settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_detail">Detail</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="menu_home">Home</string>
    <string name="menu_transactions">Transactions</string>
</resources>
