<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter_list"
            app:showAsAction="ifRoom|withText" />
    
    <item
        android:id="@+id/menu_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort"
            app:showAsAction="ifRoom|withText" />
    
    <item
        android:id="@+id/menu_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home" />
    <item
        android:id="@+id/menu_transactions"
        android:title="@string/menu_transactions"
        android:icon="@drawable/ic_transactions" />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings" />
</menu>
