<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

<EditText
    android:id="@+id/edit_detail_amount"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:autofillHints=""
    android:inputType="numberDecimal"
    android:hint="@string/hint_amount"
    android:padding="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/edit_detail_date"
/>

<EditText
    android:id="@+id/edit_detail_date"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="date"
        android:hint="@string/hint_date"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_detail_amount"
    app:layout_constraintBottom_toTopOf="@+id/edit_detail_category"
/>

<EditText
    android:id="@+id/edit_detail_category"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_category"
        android:inputType="none"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_detail_date"
    app:layout_constraintBottom_toTopOf="@+id/edit_detail_note"
/>

<EditText
    android:id="@+id/edit_detail_note"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="textMultiLine"
        android:hint="@string/hint_note"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_detail_category"
/>

<Button
    android:id="@+id/button_update"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="updateTransaction"
    android:text="@string/update"
    app:layout_constraintTop_toBottomOf="@+id/edit_detail_note"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

<Button
    android:id="@+id/button_delete"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="deleteTransaction"
    android:text="@string/delete"
    app:layout_constraintTop_toBottomOf="@+id/button_update"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
