<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

<EditText
    android:id="@+id/edit_amount"
    android:layout_width="0dp"
    android:minHeight="48dp"
    android:maxWidth="488dp"
    android:layout_height="wrap_content"
    android:hint="@string/enter_amount"
    android:inputType="numberDecimal"
    android:importantForAutofill="no"
    android:maxLength="10"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:id="@+id/edit_date"
    android:layout_width="0dp"
    android:minHeight="48dp"
    android:maxWidth="488dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:hint="@string/enter_date"
    android:inputType="date"
    android:focusable="true"
    android:clickable="true"
    android:importantForAutofill="no"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/edit_amount" />

<Spinner
    android:id="@+id/spinner_category"
    android:layout_width="0dp"
    android:minHeight="48dp"
    android:maxWidth="488dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:contentDescription="@string/select_category"
    android:spinnerMode="dropdown"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/edit_date" />

<EditText
    android:id="@+id/edit_note"
    android:layout_width="0dp"
    android:minHeight="48dp"
    android:maxWidth="488dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:hint="@string/add_note"
    android:inputType="textMultiLine"
    android:maxLines="3"
    android:importantForAutofill="no"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/spinner_category" />

<Button
    android:id="@+id/button_save"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/save_transaction"
    android:contentDescription="@string/save_transaction"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/edit_note" />

</androidx.constraintlayout.widget.ConstraintLayout>
